--- a/PodoDemo/Views/Contacts/Create.cshtml
+++ b/PodoDemo/Views/Contacts/Create.cshtml
@@ -49,13 +49,20 @@
         return true;
     }
 
-    function Pop() {
+    function AccountsSearchPop() {
         WindowOpenScroll("/Accounts/Index?isPop=true", "", 350, 600, 100, 100);
+    }
+    function ContactsSearchPop() {
+        WindowOpenScroll("/Contacts/Index?isPop=true", "", 350, 600, 100, 100);
     }
 
     function SetAccountsInfo(accountId, accountName) {
         $("#Accountname").val(accountName);
         $("#Accountid").val(accountId);
+    }
+    function SetContactsInfo(contactId, contactName) {
+        $("#Bossname").val(contactName);
+        $("#Bossid").val(contactId);
     }
 
 </script>
@@ -104,8 +111,17 @@
                     <input type="tel" id="Mobile" name="Mobile" class="form-control" placeholder="휴대폰" />
                 </div>
                 <label class="col-md-1 control-label">상사</label>
-                <div class="col-md-3">
-                    <input type="text" id="Bossid" name="Bossid" class="form-control" placeholder="상사" />
+                <div class="col-md-3">                    
+                    <div class="input-group">
+                        <input type="hidden" id="Bossid" name="Bossid" />
+                        <input type="text" id="Bossname" name="Bossname" class="form-control"
+                               placeholder="선택된 연락처가 표시됩니다." aria-describedby="contact name" readonly="readonly" />
+                        <span class="input-group-btn">
+                            <button type="button" class="btn btn-default" onclick="ContactsSearchPop();">
+                                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                            </button>
+                        </span>
+                    </div>
                 </div>
             </div>
 
@@ -117,7 +133,7 @@
                         <input type="text" id="Accountname" name="Accountname" class="form-control" 
                                placeholder="선택된 거래처가 표시됩니다." aria-describedby="account name" readonly="readonly">
                         <span class="input-group-btn">
-                            <button type="button" class="btn btn-default" onclick="Pop();">
+                            <button type="button" class="btn btn-default" onclick="AccountsSearchPop();">
                                 <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                             </button>
                         </span>
