--- a/PodoDemo/Views/Manage/MenuCreate.cshtml
+++ b/PodoDemo/Views/Manage/MenuCreate.cshtml
@@ -4,14 +4,14 @@
     {
         Layout = "~/Views/Shared/Popup_Layout.cshtml";
     }
-    
+
     bool isPop = ViewBag.isPop;
 }
 
 <link href="~/css/Layout_BootstrapCustom.css" rel="stylesheet" />
 <script type="text/javascript">
     $(document).ready(function () {
-    
+
     });
 
     // 메뉴 수정 내용 저장
@@ -27,79 +27,61 @@
         $("#MenuCreateForm").submit();
     }
 </script>
+<div class="View">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 custom-header">
+                <p class="text-left">대메뉴 생성</p>
+            </div>
+        </div>
 
-<div class="container custom-container">
-    <div class="custom-header">
-        <span>대메뉴 생성</span>
+        <form id="MenuCreateForm" class="form-horizontal">
+            <input type="hidden" id="IsPop" name="IsPop" value="@Html.Raw(isPop)" />
+
+            <div class="form-group">
+                <label class="col-md-4 control-label">이름</label>
+                <div class="col-md-8">
+                    <input type="text" id="Name" name="Name"
+                           class="form-control"
+                           placeholder="대메뉴 이름" />
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-4 control-label">순서</label>
+                <div class="col-md-8 custom-input">
+                    <input type="number" id="Order" name="Order"
+                           class="form-control"
+                           placeholder="대메뉴 순서" />
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-4 control-label">사용여부</label>
+                <div class="col-md-8 custom-input">
+                    <label class="radio-inline">
+                        <input type="radio" id="Isused_T" name="Isused" value="true" />예
+                    </label>
+                    <label class="radio-inline">
+                        <input type="radio" id="Isused_F" name="Isused" value="false" />아니오
+                    </label>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-8 col-md-2 custom-row-btn-margin">
+                    <button type="button" class="btn btn-default" onclick="SubmitForm();">
+                        <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
+                        저장
+                    </button>
+                </div>
+                <div class="col-md-2 custom-row-btn-margin">
+                    <button type="button" class="btn btn-default" onclick="window.close();">
+                        <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
+                        닫기
+                    </button>
+                </div>
+            </div>
+        </form>
     </div>
-
-    <form id="MenuCreateForm">
-        <input type="hidden" id="IsPop" name="IsPop" value="@Html.Raw(isPop)" />
-
-        <div class="row">
-            <div class="col-sm-4 custom-title">
-                <span>이름</span>
-            </div>
-            <div class="col-sm-8 custom-input">
-                <input type="text" id="Name" name="Name"
-                       class="form-control"
-                       placeholder="대메뉴 이름" />
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-4 custom-title">
-                <span>순서</span>
-            </div>
-            <div class="col-sm-8 custom-input">
-                <input type="number" id="Order" name="Order"
-                       class="form-control"
-                       placeholder="대메뉴 순서" />
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-4 custom-title">
-                <span>사용여부</span>
-            </div>
-            <div class="col-sm-8 custom-input">
-                <label class="radio-inline">
-                    <input type="radio" id="Isused_T" name="Isused" value="true" />예
-                </label>
-
-                <label class="radio-inline">
-                    <input type="radio" id="Isused_F" name="Isused" value="false" />아니오
-                </label>
-
-            </div>
-        </div>
-
-        @*<div class="row">
-            <div class="col-sm-4 custom-title">
-                <span>삭제여부</span>
-            </div>
-            <div class="col-sm-8 custom-input">
-                <label class="radio-inline">
-                    <input type="radio" id="Isdeleted_T" name="Isdeleted" value="true" />예
-                </label>
-                <label class="radio-inline">
-                    <input type="radio" id="Isdeleted_F" name="Isdeleted" value="false" />아니오
-                </label>
-            </div>
-        </div>*@
-
-        <hr />
-
-        <div class="row">
-            <div class="col-sm-12">
-                <button type="button" class="btn custom-btn custom-btn-save" onclick="SubmitForm();">저장</button>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-12">
-                <button type="button" class="btn custom-btn custom-btn-close" onclick="window.close();">닫기</button>
-            </div>
-        </div>
-    </form>
 </div>
