--- a/PodoDemo/Views/Manage/MenuEdit.cshtml
+++ b/PodoDemo/Views/Manage/MenuEdit.cshtml
@@ -47,90 +47,87 @@
         $("#MenuEditForm").submit();
     }
 </script>
+<div class="View">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 custom-header">
+                <p class="text-left">대메뉴 수정</p>
+            </div>
+        </div>
 
-<div class="container custom-container">
-    <div class="custom-header">
-        <span>대메뉴 수정</span>
+        <form id="MenuEditForm" class="form-horizontal">
+            <input type="hidden" id="Id" name="Id" value="@Model.Id" />
+            <input type="hidden" id="IsPop" name="IsPop" value="@Html.Raw(isPop)" />
+            <input type="hidden" id="Createdate" name="Createdate" value="@Model.Createdate" />
+            <input type="hidden" id="Createuser" name="Createuser" value="@Model.Createuser" />
+            <input type="hidden" id="Modifydate" name="Modifydate" value="@Model.Modifydate" />
+            <input type="hidden" id="Modifyuser" name="Modifyuser" value="@Model.Modifyuser" />
+
+            <div class="form-group">
+                <label class="col-md-4 control-label">이름</label>
+                <div class="col-md-8">
+                    <input type="text" id="Name" name="Name"
+                           class="form-control"
+                           value="@Model.Name" placeholder="대메뉴 이름" />
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-4 control-label">순서</label>
+                <div class="col-md-8">
+                    <input type="number" id="Order" name="Order"
+                           class="form-control"
+                           value="@Model.Order" placeholder="대메뉴 순서" />
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-4 control-label">사용여부</label>
+                <div class="col-md-8">
+                    <label class="radio-inline">
+                        <input type="radio" id="Isused_T" name="Isused" value="true" />예
+                    </label>
+
+                    <label class="radio-inline">
+                        <input type="radio" id="Isused_F" name="Isused" value="false" />아니오
+                    </label>
+
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-4 control-label">삭제여부</label>
+                <div class="col-md-8">
+                    <label class="radio-inline">
+                        <input type="radio" id="Isdeleted_T" name="Isdeleted" value="true" />예
+                    </label>
+                    <label class="radio-inline">
+                        <input type="radio" id="Isdeleted_F" name="Isdeleted" value="false" />아니오
+                    </label>
+                </div>
+            </div>
+
+
+            <div class="form-group">
+                <div class="col-md-offset-6 col-md-2 custom-row-btn-margin">
+                    <button type="button" class="btn btn-default" onclick="SubmitForm();">
+                        <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
+                        저장
+                    </button>
+                </div>
+                <div class="col-md-2 custom-row-btn-margin">
+                    <button type="button" id="MenuDeleteButton" class="btn btn-default btn-danger" onclick="DeleteMenu();">
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                        삭제
+                    </button>
+                </div>
+                <div class="col-md-2 custom-row-btn-margin">
+                    <button type="button" class="btn btn-default" onclick="window.close();">
+                        <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
+                        닫기
+                    </button>
+                </div>
+            </div>
+        </form>
     </div>
-
-    <form id="MenuEditForm">
-        <input type="hidden" id="Id" name="Id" value="@Model.Id" />
-        <input type="hidden" id="IsPop" name="IsPop" value="@Html.Raw(isPop)" />
-        <input type="hidden" id="Createdate" name="Createdate" value="@Model.Createdate" />
-        <input type="hidden" id="Createuser" name="Createuser" value="@Model.Createuser" />
-        <input type="hidden" id="Modifydate" name="Modifydate" value="@Model.Modifydate" />
-        <input type="hidden" id="Modifyuser" name="Modifyuser" value="@Model.Modifyuser" />
-
-        <div class="row">
-            <div class="col-sm-4 custom-title">
-                <span>이름</span>
-            </div>
-            <div class="col-sm-8 custom-input">
-                <input type="text" id="Name" name="Name"
-                       class="form-control"
-                       value="@Model.Name" placeholder="대메뉴 이름" />
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-4 custom-title">
-                <span>순서</span>
-            </div>
-            <div class="col-sm-8 custom-input">
-                <input type="number" id="Order" name="Order"
-                       class="form-control"
-                       value="@Model.Order" placeholder="대메뉴 순서" />
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-4 custom-title">
-                <span>사용여부</span>
-            </div>
-            <div class="col-sm-8 custom-input">
-                <label class="radio-inline">
-                    <input type="radio" id="Isused_T" name="Isused" value="true" />예
-                </label>
-
-                <label class="radio-inline">
-                    <input type="radio" id="Isused_F" name="Isused" value="false" />아니오
-                </label>
-
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-4 custom-title">
-                <span>삭제여부</span>
-            </div>
-            <div class="col-sm-8 custom-input">
-                <label class="radio-inline">
-                    <input type="radio" id="Isdeleted_T" name="Isdeleted" value="true" />예
-                </label>
-                <label class="radio-inline">
-                    <input type="radio" id="Isdeleted_F" name="Isdeleted" value="false" />아니오
-                </label>
-            </div>
-        </div>
-
-        <hr />
-
-        <div class="row">
-            <div class="col-sm-12">
-                <button type="button" class="btn custom-btn custom-btn-save" onclick="SubmitForm();">저장</button>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-12">
-                <button type="button" id="MenuDeleteButton" class="btn custom-btn custom-btn-delete" onclick="DeleteMenu();">삭제</button>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-12">
-                <button type="button" class="btn custom-btn custom-btn-close" onclick="window.close();">닫기</button>
-            </div>
-        </div>
-    </form>
 </div>
