메뉴 수정 관련 수정

--- a/PodoDemo/Views/Manage/SubmenuEdit.cshtml
+++ b/PodoDemo/Views/Manage/SubmenuEdit.cshtml
@@ -42,9 +42,9 @@
 
     // 메뉴 삭제
     function DeleteMenu() {
-        $("#MenuEditForm").prop("action", "/Manage/DeleteMenu");
-        $("#MenuEditForm").prop("method", "post");
-        $("#MenuEditForm").submit();
+        $("#SubmenuEditForm").prop("action", "/Manage/DeleteSubmenu");
+        $("#SubmenuEditForm").prop("method", "post");
+        $("#SubmenuEditForm").submit();
     }
 
     // 입력한 값들에 대한 유효성 검사
