--- a/PodoDemo/Views/OptionMasters/OptionDetailCreate.cshtml
+++ b/PodoDemo/Views/OptionMasters/OptionDetailCreate.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "옵션생성";
+    ViewData["Title"] = "세부옵션";
 
     //팝업일 경우 레이아웃은 팝업 전용으로 변경 아닐 경우 메뉴가 포함된 기본 레이아웃
     if (ViewBag.isPop)
@@ -20,18 +20,24 @@
     function SubmitForm() {
         // 유효성 검사 후 진행
         if (ValidateForm()) {
-            $("#OptionMasterCreateForm").prop("action", "/OptionMasters/MasterCreate");
-            $("#OptionMasterCreateForm").prop("method", "post");
-            $("#OptionMasterCreateForm").submit();
+            $("#OptionDetailCreateForm").prop("action", "/OptionMasters/OptionDetailCreate");
+            $("#OptionDetailCreateForm").prop("method", "post");
+            $("#OptionDetailCreateForm").submit();
         }
     }
 
     // 입력한 값들에 대한 유효성 검사
     function ValidateForm() {
         var name = $("#Name").val();
+        var order = $("#Order").val();
 
         if (name == "") {
             alert("옵션 이름을 입력해주세요.");
+            return false;
+        }
+
+        if (order == "") {
+            alert("순서를 입력해주세요.");
             return false;
         }
 
@@ -39,11 +45,7 @@
             alert("사용여부에 체크해주세요.");
             return false;
         }
-
-        if (!$('input[name=Issystem]:checked').val()) {
-            alert("시스템여부에 체크해주세요.");
-            return false;
-        }
+        
         return true;
     }
 </script>
@@ -51,12 +53,13 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 custom-header">
-                <p class="text-left">옵션 생성</p>
+                <p class="text-left">세부옵션 생성</p>
             </div>
         </div>
 
-        <form id="OptionMasterCreateForm" class="form-horizontal">
+        <form id="OptionDetailCreateForm" class="form-horizontal">
             <input type="hidden" id="IsPop" name="IsPop" value="@Html.Raw(isPop)" />
+            <input type="hidden" id="Masterid" name="Masterid" value="@ViewData["Masterid"]" />
             @Html.AntiForgeryToken()
 
             <div class="form-group">
@@ -64,7 +67,7 @@
                 <div class="col-md-8">
                     <input type="text" id="Name" name="Name"
                            class="form-control"
-                           placeholder="옵션 이름" />
+                           placeholder="세부옵션 이름" />
                 </div>
             </div>
 
@@ -74,6 +77,15 @@
                     <input type="text" id="Description" name="Description"
                            class="form-control"
                            placeholder="설명" />
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-4 control-label">순서</label>
+                <div class="col-md-8 custom-input">
+                    <input type="number" id="Order" name="Order"
+                           class="form-control"
+                           placeholder="세부 옵션 순서" />
                 </div>
             </div>
 
@@ -88,19 +100,7 @@
                     </label>
                 </div>
             </div>
-
-            <div class="form-group">
-                <label class="col-md-4 control-label">시스템 여부</label>
-                <div class="col-md-8">
-                    <label class="radio-inline">
-                        <input type="radio" id="Issystem_T" name="Issystem" value="true" />예
-                    </label>
-                    <label class="radio-inline">
-                        <input type="radio" id="Issystem_F" name="Issystem" value="false" />아니오
-                    </label>
-                </div>
-            </div>
-
+            
             <div class="form-group">
                 <div class="col-md-offset-8 col-md-2 custom-row-btn-margin">
                     <button type="button" class="btn btn-default" onclick="SubmitForm();">
