--- a/PodoDemo/Views/Manage/MenuEdit.cshtml
+++ b/PodoDemo/Views/Manage/MenuEdit.cshtml
@@ -42,9 +42,11 @@
 
     // 메뉴 삭제
     function DeleteMenu() {
-        $("#MenuEditForm").prop("action", "/Manage/MenuDelete");
-        $("#MenuEditForm").prop("method", "post");
-        $("#MenuEditForm").submit();
+        if (confirm("해당 내용을 삭제하면 복구할 수 없습니다.\n삭제하시겠습니까?")) {
+            $("#MenuEditForm").prop("action", "/Manage/MenuDelete");
+            $("#MenuEditForm").prop("method", "post");
+            $("#MenuEditForm").submit();
+        }        
     }
 </script>
 <div class="View">
