--- a/PodoDemo/Views/OptionMasters/OptionDetailEdit.cshtml
+++ b/PodoDemo/Views/OptionMasters/OptionDetailEdit.cshtml
@@ -32,11 +32,13 @@
         }
     }
 
-    // 옵션 삭제
+    // 옵션 세부 내용 삭제
     function DeleteOptionmasterDetail() {
-        $("#OptionDetailEditForm").prop("action", "/OptionMasters/DeleteSubmenu");
-        $("#OptionDetailEditForm").prop("method", "post");
-        $("#OptionDetailEditForm").submit();
+        if (confirm("해당 내용을 삭제하면 복구할 수 없습니다.\n삭제하시겠습니까?")) {
+            $("#OptionDetailEditForm").prop("action", "/OptionMasters/OptiondetailDelete");
+            $("#OptionDetailEditForm").prop("method", "post");
+            $("#OptionDetailEditForm").submit();
+        }
     }
 
     // 입력한 값들에 대한 유효성 검사
